--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,5 +14,22 @@
   display: none;
 }
 
+#wall div[class="parent"] > div#tag-4
+{
+  display: none;
+}
 
+#wall div[class="parent"] > div#tag-5.slick
+{
+  display: none;
+}
 
+body div#wall div.parent div:last-child div#tag-6
+{
+  display: none;
+}
+
+body div#wall div.parent div:first-child > #tag-7.slick
+{
+  display: none;
+}
