--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,35 @@
 /* write your override styles here */
+
+#wall .tag-1 {
+    display: none;
+}
+
+#wall div#tag-2
+{
+  display: none;
+}
+
+#wall div#tag-2 + div#tag-3[class="slick wicked"]
+{
+  display: none;
+}
+
+#wall div[class="parent"] > div#tag-4
+{
+  display: none;
+}
+
+#wall div[class="parent"] > div#tag-5.slick
+{
+  display: none;
+}
+
+body div#wall div.parent div:last-child div#tag-6
+{
+  display: none;
+}
+
+body div#wall div.parent div:first-child > #tag-7.slick
+{
+  display: none;
+}
